--- a/src/app/shared/components/books/edit-book/edit-book.component.html
+++ b/src/app/shared/components/books/edit-book/edit-book.component.html
@@ -40,7 +40,7 @@
       <div class="row mb-3">
         <div class="col-md-4">
           <label for="price" class="form-label">Preço</label>
-          <input type="number" id="price" class="form-control" [(ngModel)]="book.price" name="edition" (blur)="formatPrice()" placeholder="R$ 0,00">
+          <input type="number" id="price" class="form-control" [(ngModel)]="book.price" name="price" (blur)="formatPrice()" placeholder="R$ 0,00">
         </div>
 
         <div class="col-md-4">
